[package]
name = "pgen"
version = "0.1.0"
authors = ["nannany <ymym1990ymym@gmail.com>"]
license = "MIT"
description = "A tool to generate password"
readme = "README.md"
repository = "https://github.com/nannany/studious-octo-enigma"
keywords = ["cli", "demo", "generator"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
rand = "0.8.3"
